# leanpub-mullti-action

./: .pydocstyle.ini  CHANGELOG.rst  Dockerfile  LICENSE  NEWS.rst  README.md  RELEASE_NOTES.rst  action.yml  pyproject.toml  tasks.py
.github/workflows/: release.yml  tests.yml
leanpub-multi-action/: cli.py
leanpub_multi_action/: __init__.py  cli.py  leanpub.py
leanpub_multi_action/newsfragments/: 10.feature  12.feature  13.bugfix  13.feature  45.feature  48.bugfix  50.bugfix
tests/unit/: conftest.py
